# hermes-workflows

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  _config.yml  pyproject.toml
.github/workflows/: docs.yml  test.yml
_layouts/: default.html  page.html
docs/: _config.yml  authoring.md  index.md  setup-for-agents.md  summary.md
docs/_data/: docs_nav.yml
docs/_includes/: docs-nav.html
docs/_layouts/: page.html
docs/architecture/: agent-parallel-pipeline-api-grill.md  approval-adapters-and-hermes-plugin.md  dashboard-runtime-semantics-agentstep-approvals.md  domain-model-and-seams.md  dynamic-sub-workflows.md  launch-hardening-review-2026-06-05.md  runtime-vs-skills-subagents.md
docs/assets/: main.scss
docs/blog/: agents-should-stop-before-dangerous-part.md
docs/contracts/: effects.md  registry-v2.md  revision-actions.md  revisions.md  trusted-adapters.md
docs/integrations/: hermes-plugin.md
docs/operations/: inspectability-cookbook.md  installed-environment.md  invocation-audit-2026-06-06.md  sqlite-policy.md
docs/plans/: 2026-05-28-real-agentstep-subprocess-adapter.md  2026-05-29-resumable-child-workflows.md  2026-06-05-hermes-approval-plugin-plan.md  2026-06-05-real-run-open-source-blog.md  2026-06-07-workflow-definition-ergonomics.md  2026-06-12-agent-parallel-pipeline-api-visual-plan.md  2026-06-23-workflow-framework-simplification-audit.md
docs/releases/: 0.0.1rc1.json
docs/ux/: workflows-dashboard-ux-research-2026-06-06.md
docs/workflow-run-reports/: ctx-gather-repo-change-review.md  first-real-repo-launch.md
examples/: README.md  agent_cli_adapter_runner.py  agent_workspace.py  artifact_review.py  bash_repo_health.py  build_email_triage_live_fixture.py  build_hackathon_email_snapshot.py  coding_review_demo.py  coding_task_workflow.py  content_asset_lane.py  dynamic_workflow_return.py  event_planning_demo.py  first_real_trip_workflow.py  goal_revision_loop.py  local_model_adapter_workflow.py  parallel_research.py  personal_pr_delivery.py  pipeline_section_review.py  prompt_file.py  redact_hackathon_review_packet.py  render_hackathon_output_packet.py  repo_change_review_workflow.py  repo_launch_workflow.py  repo_pr_workflow.py  restart_signal_demo.py  subprocess_agent_runner.py  typed_review.py  workflows_demo_2026_06_05.py
examples/outputs/: README.md
examples/prompts/: repo_change_plan.md  starter_research.md
examples/runners/: fake_json_cli_agent.py  static_json_agent.py  workflows_demo_agent.py
plugins/hermes-workflows-approvals/: __init__.py  plugin.yaml
src/hermes_workflows/: __init__.py  agent_cli_adapter.py  agent_runner.py  approvals.py  artifacts.py  authoring.py  bash.py  cli.py  dashboard.py  decorators.py  (+30 more)
tests/: test_agent_cli_adapter.py  test_agent_prompt.py  test_agent_runner.py  test_agent_step_runner.py  test_approval_adapter_api.py  test_approval_ergonomics.py  test_approval_provenance.py  test_artifact_persistence.py  test_artifacts.py  test_authoring_api.py  test_authoring_api_cutover.py  test_bash.py  test_cancel_workflow.py  test_cli.py  test_coding_task_workflow.py  test_coding_workflow.py  test_dashboard_plugin.py  test_domain_models.py  test_dynamic_workflow_return.py  test_effect_idempotency.py  test_email_triage_live_fixture.py  test_email_triage_workflow_pilot.py  test_engine.py  test_gather.py  test_hermes_plugin_approvals.py  test_installed_cli_environment.py  test_invocation_bridge.py  test_launch_examples.py  test_operator_service_contract.py  test_package_resource_contract.py  test_package_resources.py  test_plugin_install.py  test_prompts.py  test_provenance_boundary.py  test_public_facade.py  test_python_compatibility.py  test_registry.py  test_registry_location_contract.py  test_registry_v2_contract.py  test_repo_change_review_workflow.py  (+17 more)
(+53 files in other folders)
