[project]
name = "hermes-workflows"
version = "0.0.1"
description = "Code-first durable workflows with agent steps, generated child workflows, approval gates, and receipts."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Skylar Payne" }]
keywords = ["agents", "workflows", "durable-execution", "approvals", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = []

[project.urls]
Repository = "https://github.com/skylarbpayne/hermes-workflows"
Issues = "https://github.com/skylarbpayne/hermes-workflows/issues"

[project.scripts]
hermes-workflows = "hermes_workflows.cli:main"
hermes-workflows-agent-cli-adapter = "hermes_workflows.agent_cli_adapter:main"

[project.optional-dependencies]
dev = ["pytest>=7", "build>=1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
