[project]
name = "hermes-workflows"
version = "0.0.1"
description = "Code-first durable workflows for agent work, typed Review Queues, Workflow Workers, and receipts."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Skylar Payne" }]
keywords = ["agents", "workflows", "durable-execution", "approvals", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = []

[project.urls]
Homepage = "https://skylarbpayne.com/hermes-workflows/"
Documentation = "https://skylarbpayne.com/hermes-workflows/docs/"
Repository = "https://github.com/skylarbpayne/hermes-workflows"
Issues = "https://github.com/skylarbpayne/hermes-workflows/issues"

[project.scripts]
hermes-workflows = "hermes_workflows.cli:main"
hermes-workflows-agent-cli-adapter = "hermes_workflows.agent_cli_adapter:main"

[project.entry-points."hermes_agent.plugins"]
hermes-workflows-approvals = "hermes_workflows.hermes_plugin_approvals"

[project.optional-dependencies]
dev = ["pytest>=7", "build>=1", "tomli>=2; python_version<'3.11'"]

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_workflows"]

[tool.hatch.build.targets.wheel.force-include]
"src/hermes_workflows/plugin_payload_manifest.v1.json" = "hermes_workflows/plugin_payload_manifest.v1.json"

[dependency-groups]
dev = ["pytest>=7", "build>=1", "tomli>=2; python_version<'3.11'"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
